static/style.css
/* ... */
/* Table */

tr {
    border-top: 1px solid #cccbc3;
    border-bottom: 1px solid #cccbc3;
}

table.tablelist tbody > tr:hover {
    background: #dce8d7;
}

tbody > tr:first-of-type {
    border-top: none;
}

th {
    font-size: 1.15em;
}

td, th {
    padding: .5rem;
}

/* Move table */

table.movelist, table.pokemonlist {
    width: 99%;
    table-layout: fixed;
}

table.movelist img {
    height: 1.25em;
}

table.movelist td {
    width: max-content;
}

table.movelist:not(.leveluplist, .maxlist) td:first-of-type, table.movelist:not(.leveluplist, .maxlist) th:first-of-type,
table.movelist.leveluplist td:nth-of-type(2), table.movelist.leveluplist th:nth-of-type(2) {
    width: 8em;
}

table.maxlist td:nth-of-type(2),
table.maxlist th:nth-of-type(2) {
    width: 75%;
}

@media only screen and (max-width: 400px) {
    table.maxlist td:nth-of-type(2),
    table.maxlist th:nth-of-type(2) {
        width: 75%;
        padding-left: 1.5rem;
    }
}

/* evolution divs new */
.evolutions-wrapper {
    display: grid;
    grid-auto-columns: minmax(25%, 50%);
}

.evolutions-wrapper figure {
    margin: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.evolutions-wrapper figure.stage-2::before,
.evolutions-wrapper figure.stage-3::before {
    content: "→";
    position: absolute;
    margin-top: 3.5rem;
}

.evolutions-wrapper[data-stages="2"] > figure.stage-2::before {
    margin-right: 30%;
}

.evolutions-wrapper[data-stages="3"] > figure.stage-2::before,
.evolutions-wrapper[data-stages="3"] > figure.stage-3::before {
    margin-right: 20%;
}

@media only screen and (max-width: 800px) {
    .evolutions-wrapper[data-stages="2"] > figure.stage-2::before {
        margin-right: 45%;
    }

    .evolutions-wrapper[data-stages="3"] > figure.stage-2::before,
    .evolutions-wrapper[data-stages="3"] > figure.stage-3::before {
        margin-right: 30%;
    }
}

.evolutions-wrapper figure.stretch-cell {
    justify-content: center;
}

.evolutions-wrapper figcaption {
    text-align: center;
}

.evolutions-wrapper figcaption h4 {
    margin-top: 0;
}

.evolutions-wrapper figcaption p {
    display: block;
    width: 75%;
    margin: 0 auto;
}


footer {
    font-size: .75em;
    border-top: 1px solid #cccbc3;
    width: 80%;
    display: block;
    margin: 2rem auto 0;
    text-align: center;
}

@media only screen and (max-width: 1023px) {
    h1, h2, h3, h4, h5, h6 {
        text-align: center;
    }

    hr {
        width: 70%;
    }

    /* Move page */

    .move-tagline {
        flex-direction: column;
        margin: 1.5rem 0;
    }

    .move-details {
        flex-direction: column;
    }

    .move-description {
        padding: 0 0 1rem;
    }

    .move-stats {
        width: 100%;
        margin-bottom: 2rem;
    }

    .move-details > .type-efficiencies {
        width: 100%;
    }

    /* Pokémon page */
    .pokemon-tagline, .pokemon-tagline h2 {
        margin-bottom: 0;
    }

    .pokemon-tagline h1 {
        margin-top: 2rem;
    }


    .pokemon-details {
        flex-direction: column;
    }

    .pokemon-details > * {
        width: 100% !important;
    }

    /* Tables */
    table.movelist {
        font-size: .85rem;
    }

    table.movelist:not(.maxlist) td:last-of-type, table.movelist:not(.maxlist)  th:last-of-type {
        display: none;
    }

    table.movelist:not(.leveluplist, .maxlist) th:nth-of-type(4) > span:first-of-type,
    table.movelist.leveluplist th:nth-of-type(5) > span:first-of-type {
        display: none;
    }

    table.movelist:not(.leveluplist, .maxlist) th:nth-of-type(4) > span:last-of-type,
    table.movelist.leveluplist th:nth-of-type(5) > span:last-of-type {
        display: initial;
    }

    table.move-stats {
        text-align: center;
        width: 100%;
    }

    .pokemon-type-cell {
        width: 64px;
    }

    /* Type matchup table */

    .type-efficiencies {
        justify-content: center;
    }

    .side table {
        margin: 0 auto;
    }

    .side table th {
        vertical-align: top;
    }

    .side table td > ul {
        padding: .25rem;
    }

    .side table img {
        height: 1.25em;
    }
}

@media only screen and (min-width: 601px) and (max-width: 1023px) {
    main {
        padding: 2rem;
    }

    ul.flags {
        columns: 2;
    }
}
/* ... */

